--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@firebase/firestore": "^4.7.8",
+    "@google/genai": "^0.9.0",
+    "@google/generative-ai": "^0.24.0",
     "firebase": "^11.3.1",
     "groq-sdk": "^0.17.0",
     "marked": "^15.0.7",
