--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "crons": [
         {
             "path": "/api/gen-cron",
-            "schedule": "0 * * * *"
+            "schedule": "0 1 * * *"
         }
     ]
 }
